parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@for.py-4.snap
---
source: parser/src/lexer/lexer.rs
description: "for a in range(10), range(10):\n    a = 1"
input_file: parser/test_data/inputs/one_liners/for.py
---
[
    Token {
        kind: For,
        value: None,
        start: 0,
        end: 3,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 4,
        end: 5,
    },
    Token {
        kind: In,
        value: None,
        start: 6,
        end: 8,
    },
    Token {
        kind: Identifier,
        value: Str(
            "range",
        ),
        start: 9,
        end: 14,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 14,
        end: 15,
    },
    Token {
        kind: Integer,
        value: Number(
            "10",
        ),
        start: 15,
        end: 17,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 17,
        end: 18,
    },
    Token {
        kind: Comma,
        value: None,
        start: 18,
        end: 19,
    },
    Token {
        kind: Identifier,
        value: Str(
            "range",
        ),
        start: 20,
        end: 25,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 25,
        end: 26,
    },
    Token {
        kind: Integer,
        value: Number(
            "10",
        ),
        start: 26,
        end: 28,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 28,
        end: 29,
    },
    Token {
        kind: Colon,
        value: None,
        start: 29,
        end: 30,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 30,
        end: 31,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 31,
        end: 35,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 35,
        end: 36,
    },
    Token {
        kind: Assign,
        value: None,
        start: 37,
        end: 38,
    },
    Token {
        kind: Integer,
        value: Number(
            "1",
        ),
        start: 39,
        end: 40,
    },
]
