parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@for.py-5.snap
---
source: parser/src/lexer/lexer.rs
description: "async for a in b: pass"
input_file: parser/test_data/inputs/one_liners/for.py
---
[
    Token {
        kind: Async,
        value: None,
        start: 0,
        end: 5,
    },
    Token {
        kind: For,
        value: None,
        start: 6,
        end: 9,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 10,
        end: 11,
    },
    Token {
        kind: In,
        value: None,
        start: 12,
        end: 14,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 15,
        end: 16,
    },
    Token {
        kind: Colon,
        value: None,
        start: 16,
        end: 17,
    },
    Token {
        kind: Pass,
        value: None,
        start: 18,
        end: 22,
    },
]
