parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@for.py.snap
---
source: parser/src/lexer/mod.rs
description: "for a in b: pass"
input_file: parser/test_data/inputs/one_liners/for.py
---
[
    Token {
        kind: For,
        value: None,
        start: 0,
        end: 3,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 4,
        end: 5,
    },
    Token {
        kind: In,
        value: None,
        start: 6,
        end: 8,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 9,
        end: 10,
    },
    Token {
        kind: Colon,
        value: None,
        start: 10,
        end: 11,
    },
    Token {
        kind: Pass,
        value: None,
        start: 12,
        end: 16,
    },
]
