parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@function_def.py-10.snap
---
source: parser/src/lexer/lexer.rs
description: "async def a():\n    pass"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
[
    Token {
        kind: Async,
        value: None,
        start: 0,
        end: 5,
    },
    Token {
        kind: Def,
        value: None,
        start: 6,
        end: 9,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 10,
        end: 11,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 11,
        end: 12,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 12,
        end: 13,
    },
    Token {
        kind: Colon,
        value: None,
        start: 13,
        end: 14,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 14,
        end: 15,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 15,
        end: 19,
    },
    Token {
        kind: Pass,
        value: None,
        start: 19,
        end: 23,
    },
]
