parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@function_def.py-11.snap
---
source: parser/src/lexer/mod.rs
description: "async def a(a, b, c): pass"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
[
    Token {
        kind: Async,
        value: None,
        start: 0,
        end: 5,
    },
    Token {
        kind: Def,
        value: None,
        start: 6,
        end: 9,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 10,
        end: 11,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 11,
        end: 12,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 12,
        end: 13,
    },
    Token {
        kind: Comma,
        value: None,
        start: 13,
        end: 14,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 15,
        end: 16,
    },
    Token {
        kind: Comma,
        value: None,
        start: 16,
        end: 17,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 18,
        end: 19,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 19,
        end: 20,
    },
    Token {
        kind: Colon,
        value: None,
        start: 20,
        end: 21,
    },
    Token {
        kind: Pass,
        value: None,
        start: 22,
        end: 26,
    },
]
